<resources>
    <string name="app_name">Familysafe</string>
    <string name="sos">SOS</string>
    <string name="in_case_of_emergency_keep_telling_family_members_to_contact_me">In case of emergency keep telling family members to contact me</string>
    <string name="guard">GUARD</string>
    <string name="open_when_you_are_on_a_potentially_dangerous_journey">Open when you are on a potentially dangerous journey</string>
    <string name="my_family">MY FAMILY</string>
    <string name="security">SECURITY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>