<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuardFragment"
    android:background="@color/gray">

    <TextView
        android:id="@+id/security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="24dp"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pinkCard"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/security" />

    <TextView
        android:id="@+id/sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="16dp"
        android:text="@string/sos"
        android:textColor="#FFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pinkCard"
        app:layout_constraintTop_toTopOf="@id/pinkCard" />

    <TextView
        android:id="@+id/sosDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:text="@string/in_case_of_emergency_keep_telling_family_members_to_contact_me"
        android:textColor="#FFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/pinkCard"
        app:layout_constraintStart_toStartOf="@+id/pinkCard"
        app:layout_constraintTop_toTopOf="@id/pinkCard"
        app:layout_constraintEnd_toStartOf="@id/sosImg"
        android:layout_margin="8dp"/>

    <ImageView
        android:id="@+id/sosImg"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:elevation="16dp"
        android:src="@drawable/help"
        app:layout_constraintTop_toTopOf="@id/pinkCard"
        app:layout_constraintEnd_toEndOf="@id/pinkCard"
        app:layout_constraintBottom_toBottomOf="@id/pinkCard"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/greenCard"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="16dp"
        app:layout_constraintTop_toBottomOf="@id/pinkCard"
        />

    <TextView
        android:id="@+id/guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="16dp"
        android:text="@string/guard"
        android:textColor="#FFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/greenCard"
        app:layout_constraintTop_toTopOf="@id/greenCard" />

    <TextView
        android:id="@+id/guardDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:text="@string/open_when_you_are_on_a_potentially_dangerous_journey"
        android:textColor="#FFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/greenCard"
        app:layout_constraintStart_toStartOf="@+id/greenCard"
        app:layout_constraintTop_toTopOf="@id/greenCard"
        app:layout_constraintEnd_toStartOf="@+id/guardImg"
        android:layout_margin="8dp"/>

    <ImageView
        android:id="@+id/guardImg"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:elevation="16dp"
        android:src="@drawable/policeman"
        app:layout_constraintTop_toTopOf="@id/greenCard"
        app:layout_constraintEnd_toEndOf="@id/greenCard"
        app:layout_constraintBottom_toBottomOf="@id/greenCard"/>



</androidx.constraintlayout.widget.ConstraintLayout>